Replaced padding properties to use spacings, fixed eye icon moves itself outsize input on resize
https://github.com/SoftUni-Internal/exam-systems-issues/issues/1182

--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/auth/LoginForm.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/auth/LoginForm.module.scss
@@ -1,25 +1,26 @@
 @use 'src/styles/colors';
+@use 'src/styles/spacings';
+@use 'src/styles/border-radiuses';
 
 .loginFormContentContainer {
   align-content: start;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 75px;
+  padding-top: spacings.$sp-64;
 }
 
 .loginForm {
   align-content: center;
-  border-radius: 4px;
+  border-radius: border-radiuses.$br-4;
   box-shadow: colors.$box-shadow-color;
   display: flex;
   flex-direction: column;
   font-family: Lato, serif;
   margin: 20px auto;
-  max-width: 768px;
-  padding: 3vw;
+  width: 400px;
+  padding: spacings.$sp-48;
   text-align: center;
-  width: 20vw;
 
   h2 {
     align-self: center;
@@ -52,7 +53,6 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
-  margin-top: 10px;
   width: 100%;
 }
 
